force-app/main/default/objects/NEST_Ascensus_Team_Record__c/NEST_Ascensus_Team_Record__c.object-meta.xml
<CustomObject>
    <description>Compiles data related to the NEST savings plan</description>
    <label>NEST Ascensus Team Record</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NEST Ascensus Team Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEST Ascensus Team Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>