force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_As_of_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team As of Date</label>
    <type>Date</type>
</CustomField>