force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Branch_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Branch City</label>
    <length>90</length>
    <type>Text</type>
</CustomField>