force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Branch_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Branch_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Branch Phone</label>
    <type>Phone</type>
</CustomField>