force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Branch_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Branch_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Branch Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>