force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_CRD__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_CRD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team CRD</label>
    <length>25</length>
    <type>Text</type>
</CustomField>