force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Dealer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Dealer Name</label>
    <length>145</length>
    <type>Text</type>
</CustomField>