force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Rep_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Rep Email</label>
    <type>Email</type>
</CustomField>