force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Rep_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Rep_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Rep Full Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>