force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Rep_State__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Rep_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Rep State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>