force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Rep_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Rep_Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Rep Street Address</label>
    <length>125</length>
    <type>Text</type>
</CustomField>