force-app/main/default/objects/NEST_Ascensus_Team_Record__c/fields/Ascensus_Team_Rep_Trading_ID__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_Rep_Trading_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ascensus Team Rep Trading ID</label>
    <length>45</length>
    <type>Text</type>
</CustomField>